# SmartRustyPick

./: .gitignore  Cargo.toml  Makefile  README.md  agents.md  config.toml  integration_results.md  performance_results.md  server.ext
.github/workflows/: main.yml  review.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  db.rs  lib.rs  server.rs
crates/core/src/db/: engine.rs  engine_tests.rs  mod.rs  model_tests.rs  models.rs  query.rs  query_tests.rs  tests.rs
crates/core/src/server/: certs.rs  handler.rs  handler_tests.rs  mod.rs  models.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
db_storage/OTHER_TABLE/: data
docs/: admin_commands.md  commands.md  data_structures.md  general_commands.md  protocol.md
mcp/: README.md  server.py
scripts/: setup_certs.py
src/: config.rs  db.rs  main.rs  server.rs
test/integration/: test_headless.py  test_security.py  test_server.py
test/performance/: test_load.py
